# hardlock-snc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak.1759282074  ENVELOPE.md  KEY-TRANSPARENCY.md  Makefile  PROTOCOL.md  README.md  README_API.md  README_PERF.md  README_SDK.md  SECURITY.md  THREATMODEL.md  cbindgen.toml  deny.toml  fix_gen_kats_format.patch  fix_is_multiple_of.patch  geiger.json  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  ci_geiger.yml  coverage.yml  ffi.yml  fuzz.yml  geiger.yml  geiger_report.yml  guard-main.yml  miri.yml  release.yml  sdk-tests.yml  sdks.yml  sec_geiger_gate.yml  unsafe_gate.yml  zz_geiger.yml
KATS/: hpke_base.json  ratchet.json
benches/: aead_bench.rs  argon_bench.rs  hpke_bench.rs
bindings/android/: settings.gradle
c_sample/: sample.c
examples/: chat.rs  chat_persist.rs  chat_v2.rs  pipeline.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: wire_unpack.rs
hardlock_snc/: Cargo.toml
hardlock_snc/src/: lib.rs
include/: hardlock_snc.h  hl_snc.h
lib/: libhardlock_snc.dylib  main.dart  tufkey.dart
scripts/: ci-local.sh  ci-status.sh  ci_local.sh  push_pr_merge_and_run_sdk_tests.sh  workflow.sh
src/: ffi.rs  lib.rs
src/crypto/: aeadx.rs  hpke_hybrid.rs  keys.rs  mod.rs
src/envelope/: mod.rs  transport.rs
src/identity/: mod.rs
src/kt/: mod.rs
src/ratchet/: mod.rs  (+2 more)
tests/: envelope.rs  handshake_auth_wire.rs  handshake_wire.rs  hpke_auth.rs  kats.rs  kats_hpke.rs  kt_merkle.rs  prop_ratchet.rs  ratchet_reorder.rs  replay.rs  sim_end_to_end.rs  transport.rs  wire.rs
tmp_geiger/: geiger.json
(+15 files in other folders)
