[package]
name = "hardlock-snc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Hardlock - Système Nerveux Central (HPKE handshake + Double Ratchet + XChaCha20-Poly1305 AEAD)."
repository = "https://github.com/akadilou/hardlock-snc"
keywords = ["hpke","double-ratchet","x25519","ed25519","xchacha20poly1305","argon2","e2ee"]

[features]
default = []

[dependencies]
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
getrandom = "0.2"
hkdf = "0.12"
sha2 = "0.10"
hpke = "0.11"
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
aead = "0.5"
argon2 = "0.5"
password-hash = "0.5"
zeroize = "1.7"
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
base64 = "0.22"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"

[lib]
name = "hardlock_snc"
path = "src/lib.rs"
crate-type = ["rlib","cdylib"]
